# wii2osc

./: .gitignore  README.md  create_file.sh  create_xcode.sh
Wii2Osc/: CMakeLists.txt  wii2osc.cpp
Wii2Osc/util/: OSCSender.cpp  OSCSender.h  RangeUtil.cpp  RangeUtil.h  WiiReceiver.cpp  WiiReceiver.h
Wii2Osc/wiic/: io_mac.m
